Improved swagger on products
